<resources>
    <string name="app_name">LivePari</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_no_account_signup">Don\'t have an account? <font color="#2196F3">Register Now</font></string>
    <string name="terms_note"><font color="#2196F3">Terms &amp; conditions</font> and <font color="#2196F3">Privacy Policy</font></string>
    <string name="we_need_selfie">Prove you\'re the person in your profile by recording a selfie video.</string>
    <string name="balance">Balance :</string>
    <string name="Test_Banner_AD">ca-app-pub-3940256099942544/6300978111</string>
    <string name="Live_Banner_AD">ca-app-pub-7649900603545609/5044263958</string>
    <string name="Test_Interstitial_AD">ca-app-pub-3940256099942544/1033173712</string>
    <string name="Live_Interstitial_AD">ca-app-pub-7649900603545609/6869639065</string>
    <string name="Admob_App_ID">ca-app-pub-7649900603545609~2867594157</string>
    <string name="Agora_App_ID">97ae0d4c726c4684b197905ac64d50d3</string>
    <string name="ifsc_hint">IFSC</string>
    <string name="account_number_hint">Account Number</string>
    <string name="account_holder_name_hint">Account Holder Name</string>
    <string name="amount_hint">Amount</string>
    <string name="model_terms">Your name or any other personal information will be kept secret and we will not give it to any other user\n</string>
    <string name="pricing_trial_text">Starting 10 seconds of every call will be trial. Billing starts after trial 🥳.</string>
    <string name="privacy_in_hands">Privacy in Hands</string>
    <string name="earn_from_home">Earn from Home 🥳</string>
    <string name="huge_earnings">Huge Earnings 🤑</string>
    <string name="normal_user_billing_note">The amount will be deducted from your balance on STARTING of the minute for every minute!</string>
    <string name="model_billing_note">The amount will be credited to your balance on ENDING of the minute for every minute!</string>
</resources>