<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="user"
            type="com.blogspot.bunnylists.maate.models.User" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="ExtraText">

        //Balance_Text
        <LinearLayout
            android:id="@+id/linear_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="50dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sans_bold"
                android:text="@string/balance"
                android:textColor="@color/indigo_900"
                android:textSize="36sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                tools:text=" 50"
                android:text="@{` ₹`+user.balance}"
                android:fontFamily="@font/sans_bold"
                android:textStyle="bold"
                android:textColor="@color/indigo_900"
                />
        </LinearLayout>

        //Amount_field
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amount_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/dark_3"
            android:textColorHint="@color/gray_500"
            app:prefixText="₹"
            app:prefixTextColor="@color/indigo_500"
            android:layout_marginHorizontal="80dp"
            app:hintTextColor="@color/dark_3"
            android:hint="@string/amount_hint"
            app:shapeAppearance="@style/Rounded">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amount_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/indigo_500"
                android:imeOptions="actionNext"
                android:fontFamily="@font/sans_bold"
                android:cursorVisible="false"
                android:textSize="16sp"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        //Name_field
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:boxStrokeColor="@color/dark_3"
            android:textColorHint="@color/gray_500"
            android:layout_marginHorizontal="80dp"
            app:hintTextColor="@color/dark_3"
            android:hint="@string/account_holder_name_hint"
            app:shapeAppearance="@style/Rounded">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/indigo_500"
                android:imeOptions="actionNext"
                android:fontFamily="@font/sans_bold"
                android:cursorVisible="false"
                android:textSize="16sp"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        //Account_field
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/account_number_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:boxStrokeColor="@color/dark_3"
            android:textColorHint="@color/gray_500"
            android:layout_marginHorizontal="80dp"
            app:hintTextColor="@color/dark_3"
            android:hint="@string/account_number_hint"
            app:shapeAppearance="@style/Rounded">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/account_number_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/indigo_500"
                android:imeOptions="actionNext"
                android:fontFamily="@font/sans_bold"
                android:cursorVisible="false"
                android:textSize="16sp"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        //IFSC_field
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ifsc_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:boxStrokeColor="@color/dark_3"
            android:textColorHint="@color/gray_500"
            android:layout_marginHorizontal="80dp"
            app:hintTextColor="@color/dark_3"
            android:hint="@string/ifsc_hint"
            app:shapeAppearance="@style/Rounded">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ifsc_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/indigo_500"
                android:imeOptions="actionDone"
                android:fontFamily="@font/sans_bold"
                android:cursorVisible="false"
                android:textSize="16sp"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        //Note
        <TextView
            android:id="@+id/withdraw_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/gray_500"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sans_bold"
            android:layout_marginHorizontal="20dp"/>

        //Previous Request card
        <soup.neumorphism.NeumorphCardView
            android:id="@+id/request_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:neumorph_shadowElevation="3dp"
            android:visibility="gone"
            app:neumorph_lightSource="rightTop"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginStart="20dp"
                    android:gravity="start">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Amount"
                        android:textColor="@color/dark_3"
                        android:textSize="16sp"
                        android:fontFamily="@font/sans_bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Status"
                        android:textColor="@color/dark_3"
                        android:textSize="16sp"
                        android:fontFamily="@font/sans_bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Time"
                        android:textColor="@color/dark_3"
                        android:textSize="16sp"
                        android:fontFamily="@font/sans_bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="A/C Number"
                        android:textColor="@color/dark_3"
                        android:textSize="16sp"
                        android:fontFamily="@font/sans_bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="IFSC Code"
                        android:textColor="@color/dark_3"
                        android:textSize="16sp"
                        android:fontFamily="@font/sans_bold"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="20dp"
                    android:gravity="start">
                    <TextView
                        android:id="@+id/amount_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="$2500"
                        android:textColor="@color/dark_3"
                        android:textSize="16sp"
                        android:fontFamily="@font/sans_bold"/>
                    <TextView
                        android:id="@+id/status_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Processing"
                        android:textColor="@color/yellow_500"
                        android:textSize="16sp"
                        android:fontFamily="@font/sans_bold"/>
                    <TextView
                        android:id="@+id/time_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="03/01/23_12:36PM"
                        android:textColor="@color/dark_3"
                        android:textSize="16sp"
                        android:fontFamily="@font/sans_bold"/>
                    <TextView
                        android:id="@+id/ac_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="03/01/23_12:36PM"
                        android:textColor="@color/dark_3"
                        android:textSize="16sp"
                        android:fontFamily="@font/sans_bold"/>
                    <TextView
                        android:id="@+id/ifsc_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="03/01/23_12:36PM"
                        android:textColor="@color/dark_3"
                        android:textSize="16sp"
                        android:fontFamily="@font/sans_bold"/>
                </LinearLayout>
            </LinearLayout>

        </soup.neumorphism.NeumorphCardView>

        //Previous Request buttons
        <LinearLayout
            android:id="@+id/request_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <soup.neumorphism.NeumorphButton
                android:id="@+id/help_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.Neumorph.Button"
                app:neumorph_lightSource="rightTop"
                app:neumorph_shadowElevation="3dp"
                android:text="Help"
                android:textAllCaps="false"
                android:textColor="@color/dark_3"
                android:fontFamily="@font/sans_bold"
                android:textSize="16sp"/>
            <soup.neumorphism.NeumorphButton
                android:id="@+id/edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.Neumorph.Button"
                app:neumorph_lightSource="rightTop"
                app:neumorph_shadowElevation="3dp"
                android:text="Edit"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:textColor="@color/dark_3"
                android:fontFamily="@font/sans_bold"/>
            <soup.neumorphism.NeumorphButton
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.Neumorph.Button"
                app:neumorph_lightSource="rightTop"
                app:neumorph_shadowElevation="3dp"
                android:text="Delete"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:neumorph_backgroundColor="@color/alert"
                android:fontFamily="@font/sans_bold"
                android:textSize="16sp"/>
        </LinearLayout>

        //Sending Buttons
        <LinearLayout
            android:id="@+id/sending_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <soup.neumorphism.NeumorphButton
                style="@style/Widget.Neumorph.Button"
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:neumorph_lightSource="rightTop"
                app:neumorph_shadowElevation="3dp"
                android:fontFamily="@font/sans_bold"
                android:text="Cancel"
                android:textColor="@color/dark_3"
                android:textSize="16sp"/>
            <soup.neumorphism.NeumorphButton
                style="@style/Widget.Neumorph.Button"
                android:id="@+id/withdraw_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:neumorph_lightSource="rightTop"
                app:neumorph_shadowElevation="3dp"
                android:fontFamily="@font/sans_bold"
                app:neumorph_backgroundColor="@color/indigo_500"
                android:text="Send"
                android:textColor="@color/white"
                android:textSize="18sp"/>
        </LinearLayout>

    </LinearLayout>
</layout>